{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 15,
  "lineage": "8eb324b3-b8cf-2464-5c23-e8e258dc2627",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0902ce5b703261d79",
            "arn": "arn:aws:ec2:ap-south-1:587010590580:elastic-ip/eipalloc-0902ce5b703261d79",
            "domain": "vpc",
            "id": "eipalloc-0902ce5b703261d79",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-154-3.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.154.3",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:587010590580:security-group/sg-0cd3d20c08d1bff1d",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0cd3d20c08d1bff1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.234.154.3/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "587010590580",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00e037aef44c09e38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:587010590580:security-group-rule/sgr-09e2a6dad7de3fbed",
            "cidr_ipv4": "13.234.154.3/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-09e2a6dad7de3fbed",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0cd3d20c08d1bff1d",
            "security_group_rule_id": "sgr-09e2a6dad7de3fbed",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}